# basic-pitch-torch

./: inspect_feats.py  pyproject.toml  requirements.txt
basic_pitch_torch/: __init__.py  inference.py  model.py  note_creation.py
tests/: test_predict.py
